--- a/notebook/Python-1.ipynb
+++ b/notebook/Python-1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -168,16 +168,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<type 'float'>\n",
       "<type 'int'>\n",
-      "<type 'float'>\n"
+      "<type 'complex'>\n",
+      "0\n",
+      "1.2\n"
      ]
     }
    ],
    "source": [
+    "a=2.5\n",
+    "print type(a)\n",
     "a=2\n",
     "print type(a)\n",
-    "a=2.5\n",
-    "print type(a)"
+    "a=2+3*1j\n",
+    "print type(a)\n",
+    "print 1/2\n",
+    "print 1.2"
    ]
   },
   {
@@ -477,12 +484,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1157.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import division\n",
+    "p = 5 #Interest rate\n",
+    "A = 1000 #Initial amount\n",
+    "n = 3 # Number of years\n",
+    "print A*(1+p/100)**n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -496,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -510,8 +531,8 @@
     }
    ],
    "source": [
-    "import math\n",
-    "r = math.sqrt(2)\n",
+    "import math as ma\n",
+    "r = ma.sqrt(2)\n",
     "print r"
    ]
   },
@@ -524,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -580,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -589,14 +610,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.06701781745\n"
+      "1.06701781745\n",
+      "0.199471140201\n"
      ]
     }
    ],
    "source": [
-    "from math import sin, cos, log\n",
+    "from math import sin, cos, log, exp, sqrt, pi\n",
     "x = 1.2\n",
-    "print sin(x)*cos(x) + 4*log(x)   # log is ln (base e)"
+    "print sin(x)*cos(x) + 4*log(x)   # log is ln (base e)\n",
+    "m = 0\n",
+    "s = 2\n",
+    "x = 1\n",
+    "print exp(-0.5*((x-m)/s)**2)/(sqrt(2*pi)*s)"
    ]
   },
   {
@@ -738,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
