--- a/notebook/Python-5.ipynb
+++ b/notebook/Python-5.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "# Open text file\n",
-    "infile = open(\"myfile.dat\", \"r\")\n",
+    "infile = open(\"myfile.dat\", \"r\") # 'r', 'w' or 'rw'\n",
     "\n",
     "# Read next line:\n",
     "line = infile.readline()\n",
@@ -1308,7 +1308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
