--- a/notebook/Python-5.ipynb
+++ b/notebook/Python-5.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -268,12 +268,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Paris': 17.5, 'Oslo': 13, 'London': 15.4, 'Madrid': 26.0}\n"
+      "{'Paris': 17.5, 'Oslo': 13, 'London': 15.4, 'Madrid': 27.0}\n"
      ]
     }
    ],
    "source": [
-    "temps[\"Madrid\"] = 26.0\n",
+    "temps[\"Madrid\"] = 27.0\n",
     "print temps"
    ]
   },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +298,7 @@
       "The temperature in Paris is 17.5\n",
       "The temperature in Oslo is 13\n",
       "The temperature in London is 15.4\n",
-      "The temperature in Madrid is 26\n"
+      "The temperature in Madrid is 27\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Me no can give you Berlin hot or cold.\n"
+      "Me no can give you Berlin hot or cold, sorry!\n"
      ]
     }
    ],
@@ -349,12 +349,12 @@
     "if \"Berlin\" in temps:\n",
     "    print \"We have Berlin and its temperature is \", temps[\"Berlin\"]\n",
     "else:\n",
-    "    print \"Me no can give you Berlin hot or cold.\""
+    "    print \"Me no can give you Berlin hot or cold, sorry!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
