--- a/notebook/Python-6.ipynb
+++ b/notebook/Python-6.ipynb
@@ -80,13 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class Y:\n",
+    "class Y(object): # Y is the NAME of the class\n",
     "    def __init__(self, v0):\n",
     "        self.v0 = v0\n",
     "        self.g = 9.81\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -112,15 +112,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.25095\n"
+      "0.25095 -17.62\n"
      ]
     }
    ],
    "source": [
     "y = Y(v0=3)      # Create instance\n",
     "v = y.value(0.1) # Compute function value\n",
+    "newy = Y(v0=1.)\n",
     "\n",
-    "print v"
+    "print v, newy.value(2.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "0.25095\n"
+     ]
+    }
+   ],
+   "source": [
+    "newy.g = 1.\n",
+    "print newy.value(1.)\n",
+    "print y.value(0.1)"
    ]
   },
   {
@@ -885,13 +908,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class Y:\n",
+    "class Y(object):\n",
     "    def __init__(self, v0):\n",
     "        self.v0 = v0\n",
     "        self.g = 9.81\n",
@@ -950,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -968,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -977,6 +1000,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "v0*t - 0.5*g*t**2; v0=1.5\n",
+      "v0*t - 0.5*g*t**2; v0=1.5\n",
       "v0*t - 0.5*g*t**2; v0=1.5\n"
      ]
     }
@@ -985,7 +1010,9 @@
     "y = Y(1.5)\n",
     "y(0.2)\n",
     "\n",
-    "print y"
+    "print y\n",
+    "print y.__str__()\n",
+    "print Y.__str__(y)"
    ]
   },
   {
@@ -1035,12 +1062,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class HW(object):\n",
+    "    def what_do_we_say(self):\n",
+    "        return \"Hello, World!\"\n",
+    "\n",
+    "y = HW()\n",
+    "z = y.what_do_we_say()\n",
+    "print z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1082,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
