--- a/notebook/Python-1.ipynb
+++ b/notebook/Python-1.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -286,14 +286,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5\n"
+      "26220.4724409\n",
+      "2185.03937008\n",
+      "728.346456693\n",
+      "0.41383321403\n"
      ]
     }
    ],
    "source": [
-    "length = 666\n",
+    "length = 666 # (in metres)\n",
     "from __future__ import division\n",
-    "print 1/2"
+    "imp_length = 100*length/2.54\n",
+    "print imp_length\n",
+    "print imp_length/12\n",
+    "print imp_length/36\n",
+    "print imp_length/(36*1760)"
    ]
   },
   {
@@ -373,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -382,13 +389,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.142\n"
+      "Force due to gravity:       4.218 N\n",
+      "Drag force for a hard kick: 5.068 N\n",
+      "Drag force for a soft kick: 0.035 N\n"
      ]
     }
    ],
    "source": [
     "import math\n",
-    "print \"%.3f\" % math.pi"
+    "\n",
+    "g = 9.81                    # ms^{-2}, acceleration due to gravity\n",
+    "Cd = 0.2                    # kg^{-1}s, drag coefficient\n",
+    "rho = 1.2                   # kgm^{-3}, density of air\n",
+    "a = 0.11                    # m, radius of football\n",
+    "A = math.pi*a**2            # m^2, surface area of football\n",
+    "V1 = 120000/3600            # ms^{-1}, hard kick velocity\n",
+    "V2 = 10000/3600             # ms^{-1}, soft kick velocity\n",
+    "m = 0.43                    # kg, mass of football\n",
+    "Fg = m*g                    # N, force due to gravity\n",
+    "Fd1 = 0.5*Cd*rho*A*V1**2    # N, drag force for hard kick\n",
+    "Fd2 = 0.5*Cd*rho*A*V2**2    # N, drag force for soft kick\n",
+    "\n",
+    "print \"Force due to gravity:       %.3f N\" % Fg\n",
+    "print \"Drag force for a hard kick: %.3f N\" % Fd1\n",
+    "print \"Drag force for a soft kick: %.3f N\" % Fd2"
    ]
   },
   {
@@ -637,11 +661,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(x) = 0.1760\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -693,12 +724,21 @@
        " 'trunc']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from math import sqrt, exp, pi\n",
+    "\n",
+    "m = 0.0\n",
+    "s = 2.0\n",
+    "x = 1.0\n",
+    "f = exp(-0.5*((x-m)/s)**2)/(sqrt(2*pi)*s)\n",
+    "\n",
+    "print \"f(x) = %.4f\" % f\n",
+    "\n",
     "dir(math)"
    ]
   },
@@ -716,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -725,17 +765,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-0.25+0.968245836552j) (-0.25-0.968245836552j)\n"
+      "(-0.25+0.968245836552j) (-0.25-0.968245836552j)\n",
+      "0j\n",
+      "0j\n"
      ]
     }
    ],
    "source": [
-    "a = 2; b = 1; c = 2\n",
+    "a = 2.0; b = 1.0; c = 2.0\n",
     "from cmath import sqrt\n",
     "q = sqrt(b*b - 4*a*c)\n",
     "x1 = (-b + q)/(2*a)\n",
     "x2 = (-b - q)/(2*a)\n",
-    "print x1, x2"
+    "print x1, x2\n",
+    "print a*x1**2+b*x1+c\n",
+    "print a*x2**2+b*x2+c"
    ]
   },
   {
