--- a/notebook/Python-6.ipynb
+++ b/notebook/Python-6.ipynb
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1082,7 +1082,9 @@
     "\n",
     "y = HW()\n",
     "z = y.what_do_we_say()\n",
-    "print z"
+    "print z\n",
+    "\n",
+    "# or def __str__(self) and then print HW()"
    ]
   },
   {
