--- a/notebook/Python-2.ipynb
+++ b/notebook/Python-2.ipynb
@@ -387,24 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-12-47f4b4075c9c>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-47f4b4075c9c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    counter = counter + 1\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
      ]
     }
    ],
    "source": [
     "counter = 0\n",
     "while counter <= 10:\n",
-    "counter = counter + 1\n",
+    "    counter += 1\n",
     "print counter"
    ]
   },
@@ -1083,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1125,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1350,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1480,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1496,7 +1495,7 @@
    "source": [
     "v = [-1, 1, 10]\n",
     "for e in v:\n",
-    "    e=e+2\n",
+    "    e += 2\n",
     "print v"
    ]
   },
@@ -1565,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1607,26 +1606,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Fdegrees' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-f47e30aa8795>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCdegrees\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFdegrees\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Fdegrees' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5.0  23.0\n",
+      "-4.5  23.9\n",
+      "-4.0  24.8\n",
+      "-3.5  25.7\n",
+      "-3.0  26.6\n",
+      "-2.5  27.5\n",
+      "-2.0  28.4\n",
+      "-1.5  29.3\n",
+      "-1.0  30.2\n",
+      "-0.5  31.1\n",
+      "0.0  32.0\n",
+      "0.5  32.9\n",
+      "1.0  33.8\n",
+      "1.5  34.7\n",
+      "2.0  35.6\n",
+      "2.5  36.5\n"
      ]
     }
    ],
    "source": [
     "for C, F in zip(Cdegrees, Fdegrees):\n",
-    "    print C, F"
+    "    print '%.1f  %.1f' % (C, F)"
    ]
   },
   {
@@ -1638,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1647,16 +1657,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 1.5 9.1\n",
-      "6 1 3\n",
-      "1 0 2\n"
+      "  3   1   9\n",
+      "  6   1   3\n",
+      "  1   0   2\n"
      ]
     }
    ],
    "source": [
     "l1 = [3, 6, 1]; l2 = [1.5, 1, 0]; l3 = [9.1, 3, 2]\n",
     "for e1, e2, e3 in zip(l1, l2, l3):\n",
-    "    print e1, e2, e3"
+    "    print '%3d %3d %3d' % (e1, e2, e3)"
    ]
   },
   {
@@ -1832,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1851,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1861,9 +1871,9 @@
      "evalue": "'tuple' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-f92606d6fa8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m--------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-f92606d6fa8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -1874,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1884,9 +1894,9 @@
      "evalue": "'tuple' object has no attribute 'append'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-78592bf72d62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m--------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-78592bf72d62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
@@ -1897,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1907,9 +1917,9 @@
      "evalue": "'tuple' object doesn't support item deletion",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-0193a527a912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m--------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-0193a527a912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object doesn't support item deletion"
      ]
     }
@@ -1927,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1965,6 +1975,46 @@
     "Step 1: Write a program that prints a table with $t$ values in the first column and the corresponding $y(t) = v_0 t − 0.5gt^2$ values in the second column. Use $n$ uniformly spaced $t$ values throughout the interval [0, $2v_0/g$]. Set $v0 = 1$, $g = 9.81$, and $n = 11$.\n",
     "\n",
     "Step 2: Once step 1 is working, modify the program so that the $t$ and $y$ values are stored in two lists *t* and *y*. Thereafter, transverse the lists with a *for* loop and write out a nicely formatted table of *t* and *y* values using a *zip* construction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00000  0.00000 \n",
+      "0.02039  0.01835 \n",
+      "0.04077  0.03262 \n",
+      "0.06116  0.04281 \n",
+      "0.08155  0.04893 \n",
+      "0.10194  0.05097 \n",
+      "0.12232  0.04893 \n",
+      "0.14271  0.04281 \n",
+      "0.16310  0.03262 \n",
+      "0.18349  0.01835 \n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import linspace\n",
+    "\n",
+    "v0 = 1\n",
+    "g = 9.81\n",
+    "n = 11\n",
+    "t = linspace(0,2*v0/g,n)\n",
+    "y = []\n",
+    "for i in range(0,10):\n",
+    "    y.append(v0*t[i]-0.5*g*t[i]**2)\n",
+    "    print '%.5f  %.5f ' % (t[i], y[i])\n",
+    "    \n",
+    "# for i, j in zip(t, y):\n",
+    "#    print '%.5f  %.5f' % (i, j)"
    ]
   },
   {
