--- a/notebook/Python-3.ipynb
+++ b/notebook/Python-3.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -129,49 +129,20 @@
      "output_type": "stream",
      "text": [
       "Let's play Battleship!\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "3\n",
-      "1\n",
-      "Guess Row:1\n",
-      "Guess Col:1\n",
-      "You missed my battleship!\n",
-      "1\n",
-      "O O O O O\n",
-      "O X O O O\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "Guess Row:2\n",
-      "Guess Col:2\n",
-      "You missed my battleship!\n",
-      "2\n",
-      "O O O O O\n",
-      "O X O O O\n",
-      "O O X O O\n",
-      "O O O O O\n",
-      "O O O O O\n",
-      "Guess Row:3\n",
-      "Guess Col:3\n",
-      "You missed my battleship!\n",
-      "3\n",
-      "O O O O O\n",
-      "O X O O O\n",
-      "O O X O O\n",
-      "O O O X O\n",
-      "O O O O O\n",
-      "Guess Row:4\n",
-      "Guess Col:4\n",
-      "O O O O O\n",
-      "O X O O O\n",
-      "O O X O O\n",
-      "O O O X O\n",
-      "O O O O X\n",
-      "Game Over\n",
-      "My ship was here: [3][1]\n"
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "O O O O O O O O O O\n",
+      "HINT: Row =  6 Col =  9\n",
+      "Guess Row:6\n",
+      "Guess Col:9\n",
+      "Congratulations! You sunk my battleship!\n"
      ]
     }
    ],
@@ -180,8 +151,8 @@
     "\n",
     "board = []\n",
     "\n",
-    "for x in range(0,5):\n",
-    "  board.append([\"O\"] * 5)\n",
+    "for x in range(0,10):\n",
+    "  board.append([\"O\"] * 10)\n",
     "\n",
     "def print_board(board):\n",
     "  for row in board:\n",
@@ -198,8 +169,7 @@
     "\n",
     "ship_row = random_row(board)\n",
     "ship_col = random_col(board)\n",
-    "print ship_row\n",
-    "print ship_col\n",
+    "print \"HINT: Row = \", ship_row, \"Col = \", ship_col\n",
     "\n",
     "for turn in range(4):\n",
     "\tguess_row = int(raw_input(\"Guess Row:\"))\n",
@@ -236,12 +206,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature in degrees Fahrenheit: -40.0\n",
+      "Temperature in degrees Celcius: -40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "F = raw_input(\"Temperature in degrees Fahrenheit: \")\n",
+    "F = float(F)\n",
+    "C = 5*(F-32)/9\n",
+    "print \"Temperature in degrees Celcius:\", C"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,14 +237,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t=? 1\n",
+      "v0=? 10\n",
+      "5.095\n"
+     ]
+    }
+   ],
    "source": [
-    "v0 = 3; g = 9.81; t = 0.6\n",
-    "y = v0*t - 0.5*g*t**2\n",
+    "t = raw_input(\"t=? \"); t = float(t)\n",
+    "v0 = raw_input(\"v0=? \"); v0 = float(v0)\n",
+    "g = 9.81;                # Acceleration due to gravity\n",
+    "y = v0*t - 0.5*g*t**2    # Computation\n",
     "print y"
    ]
   },
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -293,9 +289,10 @@
      "evalue": "tuple index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-ed0cf2187656>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplaces_i_would_rather_be\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"pub\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Fernanda de Noronha\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Dolomites\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"anywhere but here\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0moption\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m \u001b[1;31m# lets assume that the user have giving the input option 4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mplaces_i_would_rather_be\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moption\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
+      "\u001b[0;31m------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-d486cfda2ddb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mplaces_i_would_rather_be\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"pub\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Fernanda de Noronha\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Dolomites\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"anywhere but here\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0moption\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m \u001b[0;31m# lets assume that the user has given the input option 4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mplaces_i_would_rather_be\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moption\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
    ],
@@ -333,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -347,7 +344,8 @@
       "1. Fernanda de Noronha\n",
       "2. Dolomites\n",
       "3. Anywhere but here\n",
-      "Pub\n"
+      "4\n",
+      "ERROR: You need to specify an integer between 0 and 3\n"
      ]
     },
     {
@@ -356,21 +354,7 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: You need to specify an integer\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
      ]
     }
    ],
@@ -391,7 +375,7 @@
     "    option = int(raw_input(msg))\n",
     "    print glib_reply[option]\n",
     "except:\n",
-    "    print \"ERROR: You need to specify an integer\"\n",
+    "    print \"ERROR: You need to specify an integer between 0 and 3\"\n",
     "    sys.exit(1)"
    ]
   },
@@ -408,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -422,7 +406,8 @@
       "1. Fernanda de Noronha\n",
       "2. Dolomites\n",
       "3. Anywhere but here\n",
-      "4\n"
+      "-5\n",
+      "ERROR: You need to specify an integer between in the range 0-3.\n"
      ]
     },
     {
@@ -431,21 +416,7 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: You need to specify an integer between in the range 0-3.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
      ]
     }
    ],
@@ -471,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -485,7 +456,8 @@
       "1. Fernanda de Noronha\n",
       "2. Dolomites\n",
       "3. Anywhere but here\n",
-      "Pub\n"
+      "4\n",
+      "ERROR: You need to specify an integer between in the range 0-3.\n"
      ]
     },
     {
@@ -494,21 +466,7 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: You need to specify an integer\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
      ]
     }
    ],
@@ -533,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -555,9 +513,10 @@
      "evalue": "You need to specify an integer value.",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-b2a90e4c160e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mglib_reply\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0moption\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"You need to specify an integer value.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"You need to specify an integer between in the range 0-3.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: You need to specify an integer value."
+      "\u001b[0;31m------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-b2a90e4c160e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0mglib_reply\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moption\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You need to specify an integer value.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You need to specify an integer between in the range 0-3.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: You need to specify an integer value."
      ]
     }
    ],
@@ -583,12 +542,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature in degrees Fahrenheit: -3\n",
+      "Temperature in degrees Celcius: -19.4444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    F = float(raw_input(\"Temperature in degrees Fahrenheit: \"))\n",
+    "    C = 5*(F-32)/9\n",
+    "    print \"Temperature in degrees Celcius:\", C\n",
+    "except ValueError:\n",
+    "    print \"ERROR: You need to specify a real number\"\n",
+    "    sys.exit(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -600,12 +576,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t=? 6\n",
+      "v0=? u\n",
+      "ERROR: You need to specify real numbers\n",
+      "t=? 5\n",
+      "v0=? 6\n",
+      "-92.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    t = float(raw_input(\"t=? \"))\n",
+    "    v0 = float(raw_input(\"v0=? \")) \n",
+    "except ValueError:\n",
+    "    print \"ERROR: You need to specify real numbers\"\n",
+    "    t = float(raw_input(\"t=? \"))\n",
+    "    v0 = float(raw_input(\"v0=? \"))\n",
+    "g = 9.81;                # Acceleration due to gravity\n",
+    "y = v0*t - 0.5*g*t**2    # Computation\n",
+    "print y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -622,7 +622,25 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "g = 9.81;                # Acceleration due to gravity\n",
+    "\n",
+    "try:\n",
+    "    v0 = float(raw_input(\"v0=? \"))\n",
+    "    t = float(raw_input(\"t=? \"))\n",
+    "    u = 2*v0/g\n",
+    "    if not (0 <= t <= u):\n",
+    "        raise IndexError  # TECHNICALLY not an IndexError - how to change?\n",
+    "except IndexError:\n",
+    "    raise IndexError(\"t should be in the range (0\",u)\n",
+    "except ValueError:\n",
+    "    print \"ERROR: You need to specify real numbers\"\n",
+    "    t = float(raw_input(\"t=? \"))\n",
+    "    v0 = float(raw_input(\"v0=? \"))\n",
+    "    \n",
+    "y = v0*t - 0.5*g*t**2    # Computation\n",
+    "print y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,12 +652,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v0=? 5\n",
+      "t=? 2\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "('t should be in the range (0', 1.019367991845056)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-89b43c5bf1d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m  \u001b[0;31m# TECHNICALLY not an IndexError - how to change?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"t should be in the range (0\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"ERROR: You need to specify real numbers\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: ('t should be in the range (0', 1.019367991845056)"
+     ]
+    }
+   ],
+   "source": [
+    "g = 9.81;                # Acceleration due to gravity\n",
+    "\n",
+    "try:\n",
+    "    v0 = float(raw_input(\"v0=? \"))\n",
+    "    t = float(raw_input(\"t=? \"))\n",
+    "    u = 2*v0/g\n",
+    "    if not (0 <= t <= u):\n",
+    "        raise IndexError  # TECHNICALLY not an IndexError - how to change?\n",
+    "except IndexError:\n",
+    "    raise IndexError(\"t should be in the range (0\",u)\n",
+    "except ValueError:\n",
+    "    print \"ERROR: You need to specify real numbers\"\n",
+    "    t = float(raw_input(\"t=? \"))\n",
+    "    v0 = float(raw_input(\"v0=? \"))\n",
+    "    \n",
+    "y = v0*t - 0.5*g*t**2    # Computation\n",
+    "print y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -654,9 +710,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Speed in km/h: 50\n",
+      "Friction coefficient: 0.3\n",
+      "Braking distance: 32.7728906843 metres\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "try:\n",
+    "    v0 = float(raw_input(\"Speed in km/h: \"))\n",
+    "    mu = float(raw_input(\"Friction coefficient: \"))\n",
+    "    if not (0 <= mu <= 1):\n",
+    "        print \"ERROR: mu must be in range [0,1]\"\n",
+    "        sys.exit(1)\n",
+    "    v0 = v0/3.6\n",
+    "    d = 0.5*v0**2/(mu*g)\n",
+    "    print \"Braking distance:\", d, \"metres\"\n",
+    "except ValueError:\n",
+    "    print \"ERROR: v0 and mu must be real numbers\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
