--- a/notebook/Python-6.ipynb
+++ b/notebook/Python-6.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -287,6 +287,7 @@
       "5.02654824574 -0.00624028118657\n",
       "5.65486677646 -0.0020575066539\n",
       "6.28318530718 -4.57391552795e-19\n",
+      "\n",
       "0.0 0.0\n",
       "0.628318530718 2.14765406617\n",
       "1.25663706144 0.422475365359\n",
@@ -314,7 +315,7 @@
     "    return sin(t)*exp(-t)\n",
     "\n",
     "table(g, 2*pi, 11) # send ordinary function\n",
-    "\n",
+    "print\n",
     "y = Y(6.5)\n",
     "table(y.value, 2*pi, 11) # send class method"
    ]
@@ -333,12 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class F(object):\n",
+    "    def __init__(self, a, w):\n",
+    "        self.a = a\n",
+    "        self.w = w\n",
+    "    def value(self, x):\n",
+    "        return exp(-self.a*x)*sin(self.w*x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,16 +357,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013353835137\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from math import *\n",
     "f = F(a=1.0, w=0.1)\n",
     "print f.value(x=pi)\n",
-    "f.a = 2\n",
+    "f.w = 0\n",
     "print f.value(pi)"
    ]
   },
@@ -372,12 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Simple(object):\n",
+    "    def __init__(self,i):\n",
+    "        self.i = i\n",
+    "    def double(self):\n",
+    "        return i+i"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -388,11 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Hello\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = Simple(4)\n",
     "for i in range(4):\n",
@@ -403,7 +436,9 @@
     "s2.double(); s2.double()\n",
     "print s2.i\n",
     "s2.i = 100\n",
-    "print s2.i"
+    "print s2.i\n",
+    "\n",
+    "# WHY does this not work??"
    ]
   },
   {
@@ -524,12 +559,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Account:\n",
+    "    \n",
+    "    def __init__(self, name, account_number, initial_amount):\n",
+    "        self.name = name\n",
+    "        self.no = account_number\n",
+    "        self.balance = initial_amount\n",
+    "        self.cnt = 0\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "        self.cnt += 1\n",
+    "        \n",
+    "    def withdraw(self, amount):\n",
+    "        self.balance -= amount\n",
+    "        self.cnt += 1\n",
+    "        \n",
+    "    def dump(self):\n",
+    "        s = '%s, %s, balance: %s, transactions: %s' % (self.name, self.no, self.balance, self.cnt)\n",
+    "        print s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Olsson, 19371554951, balance: 13500, transactions: 3\n",
+      "Liz Olsson, 19371564761, balance: 9500, transactions: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = Account('John Olsson', '19371554951', 20000)\n",
+    "a2 = Account('Liz Olsson', '19371564761', 20000)\n",
+    "a1.deposit(1000)\n",
+    "a1.withdraw(4000)\n",
+    "a2.withdraw(10500)\n",
+    "a1.withdraw(3500)\n",
+    "a1.dump()\n",
+    "a2.dump()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -569,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -580,20 +662,23 @@
     "        self._name = name\n",
     "        self._no = account_number\n",
     "        self._balance = initial_amount\n",
+    "        self._cnt = 0\n",
     "    def deposit(self, amount):\n",
     "        self._balance += amount\n",
+    "        self._cnt += 1\n",
     "    def withdraw(self, amount):\n",
     "        self._balance -= amount\n",
+    "        self._cnt += 1\n",
     "    def get_balance(self):    # NEW - read balance value\n",
     "        return self._balance\n",
     "    def dump(self):\n",
-    "        s = '%s, %s, balance: %s' %(self._name, self._no, self._balance)\n",
+    "        s = '%s, %s, balance: %s, transactions: %s' %(self._name, self._no, self._balance, self._cnt)\n",
     "        print s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -605,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -624,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -671,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -707,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -716,6 +801,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Joe Wallwork\n",
+      "private phone:  07925841070\n",
+      "email address:  j.wallwork16@imperial.ac.uk\n",
+      "\n",
       "Gerard Gorman\n",
       "office phone:   49985\n",
       "email address:  g.gorman@imperial.ac.uk\n",
@@ -734,7 +823,10 @@
     "p2 = Person('ICT Service Desk', office_phone='49000')\n",
     "p2.add_email('service.desk@imperial.ac.uk')\n",
     "\n",
-    "phone_book = {'Gorman': p1, 'ICT': p2}\n",
+    "p3 = Person('Joe Wallwork', email='j.wallwork16@imperial.ac.uk')\n",
+    "p3.add_private_phone('07925841070')\n",
+    "\n",
+    "phone_book = {'Gorman': p1, 'ICT': p2, 'Me': p3}\n",
     "for p in phone_book:\n",
     "    phone_book[p].dump()"
    ]
@@ -749,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -766,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -775,13 +867,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A circle with radius 5 at (2, -1) has area 78.5398\n"
+      "A circle with radius 5 at (2, -1) has area 78.5398 and circumference 31.4159\n"
      ]
     }
    ],
    "source": [
     "c = Circle(2, -1, 5)\n",
-    "print 'A circle with radius %g at (%g, %g) has area %g' % (c.R, c.x0, c.y0, c.area())"
+    "print 'A circle with radius %g at (%g, %g) has area %g and circumference %g' % (c.R, c.x0, c.y0, c.area(), c.circumference())"
    ]
   },
   {
@@ -794,34 +886,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def line(x0, y0, x1, y1):\n",
-    "    \"\"\"\n",
-    "    Compute the coefficients a and b in the mathematical\n",
-    "    expression for a straight line y = a*x + b that goes\n",
-    "    through two points (x0, y0) and (x1, y1).\n",
-    "    x0, y0: a point on the line (floats).\n",
-    "    x1, y1: another point on the line (floats).\n",
-    "    return: coefficients a, b (floats) for the line (y=a*x+b).\n",
-    "    \"\"\"\n",
-    "    a = (y1 - y0)/float(x1 - x0)\n",
-    "    b = y0 - a*x0\n",
-    "    return a, b"
+    "class Line(object):\n",
+    "    def __init__(self, x0, y0, x1, y1):\n",
+    "        self.x0, self.y0, self.x1, self.y1 = x0, y0, x1, y1\n",
+    "    def value(self,x):\n",
+    "        a = (self.y1 - self.y0)/float(self.x1 - self.x0)\n",
+    "        b = self.y0 - a*self.x0\n",
+    "        return a*x+b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A line intersecting (1, 3) and (2, 2) also intersects (0, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = Line(1,3,2,2)\n",
+    "x = 0\n",
+    "print 'A line intersecting (%g, %g) and (%g, %g) also intersects (%g, %g)' % (l.x0, l.y0, l.x1, l.y1, x, l.value(x))"
+   ]
   },
   {
    "cell_type": "markdown",
