--- a/notebook/Python-1.ipynb
+++ b/notebook/Python-1.ipynb
@@ -784,6 +784,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Option A or B?A\n",
+      "air\n"
+     ]
+    }
+   ],
+   "source": [
+    "choices = {'A' : 'air', 'B' : 'water'}\n",
+    "\n",
+    "answer = raw_input(\"Option A or B?\")\n",
+    "\n",
+    "while not answer in choices:\n",
+    "    answer = raw_input(\"Try again\")\n",
+    "\n",
+    "print choices[answer]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
