--- a/notebook/Python-3.ipynb
+++ b/notebook/Python-3.ipynb
@@ -237,27 +237,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t=? 1\n",
-      "v0=? 10\n",
-      "5.095\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = raw_input(\"t=? \"); t = float(t)\n",
     "v0 = raw_input(\"v0=? \"); v0 = float(v0)\n",
     "g = 9.81;                # Acceleration due to gravity\n",
     "y = v0*t - 0.5*g*t**2    # Computation\n",
     "print y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "choices = {1,2}\n",
+    "\n",
+    "opt = raw_input(\"Option 1 or 2?\")\n",
+    "\n",
+    "while not opt in choices:\n",
+    "    answer = raw_input(\"Try again\")\n",
+    "\n",
+    "print choices[answer]"
    ]
   },
   {
