--- a/notebook/Python-5.ipynb
+++ b/notebook/Python-5.ipynb
@@ -162,6 +162,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "choices = {'A' : 'air', 'B' : 'water'}\n",
+    "\n",
+    "opt = raw_input(\"Option A or B?\")\n",
+    "\n",
+    "while not opt in choices:\n",
+    "    answer = raw_input(\"Try again\")\n",
+    "\n",
+    "print choices[answer]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,6 +200,24 @@
     "\n",
     "We assume $v(0) = 0$ so that also $v_0 = 0$.\n",
     "Read the values $a_0, \\ldots, a_{n-1}$ from file into an array, plot the acceleration versus time, and use the Trapezoidal rule to compute one $v(t_k)$ value, where $\\Delta t$ and $k \\geq 1$ are specified using raw_input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "k = 6\n",
+    "dt = 1\n",
+    "\n",
+    "x = np.linspace(0,k*dt,k)\n",
+    "\n",
+    "print x"
    ]
   },
   {
