--- a/notebook/Python-6.ipynb
+++ b/notebook/Python-6.ipynb
@@ -937,12 +937,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from cmath import sqrt\n",
+    "\n",
+    "class Quadratic(object):\n",
+    "    def __init__(self, a, b, c):\n",
+    "        self.a, self.b, self.c = a, b, c\n",
+    "    def value(self, x):\n",
+    "        return self.a*x**2+self.b*x+self.c\n",
+    "    def table(self, L, R, n):\n",
+    "        for t in np.linspace(L,R,n):\n",
+    "            print t, self.value(t)\n",
+    "    def roots(self):\n",
+    "        x1 = (-self.b+sqrt(self.b**2-4*self.a*self.c))/(2*self.a)\n",
+    "        x2 = (-self.b-sqrt(self.b**2-4*self.a*self.c))/(2*self.a)\n",
+    "        return x1, x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q(4) = 9\n",
+      "\n",
+      "Table of values:\n",
+      "0.0 1.0\n",
+      "0.2 0.64\n",
+      "0.4 0.36\n",
+      "0.6 0.16\n",
+      "0.8 0.04\n",
+      "1.0 0.0\n",
+      "1.2 0.04\n",
+      "1.4 0.16\n",
+      "1.6 0.36\n",
+      "1.8 0.64\n",
+      "2.0 1.0\n",
+      "\n",
+      "The roots of q are  ((1+0j), (1+0j))\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = Quadratic(1,-2,1)\n",
+    "print \"q(4) =\",q.value(4)\n",
+    "print\n",
+    "print \"Table of values:\"\n",
+    "q.table(0,2,11)\n",
+    "print\n",
+    "print \"The roots of q are \",q.roots()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1196,11 +1252,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from math import pi, exp, sin, cos\n",
+    "\n",
+    "class F2(object):\n",
+    "    def __init__(self, a, w):\n",
+    "        self.a = a\n",
+    "        self.w = w\n",
+    "    def __call__(self, x):\n",
+    "        return exp(-self.a*x)*sin(self.w*x)\n",
+    "    def __str__(self):\n",
+    "        return 'f(x) = exp(-ax)sin(wx); a = %g, w = %g' % (self.a, self.w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013353835137\n",
+      "0.00057707154012\n",
+      "f(x) = exp(-ax)sin(wx); a = 2, w = 0.1\n"
+     ]
+    }
+   ],
    "source": [
     "f = F2(1.0, 0.1)\n",
     "print f(pi)\n",
@@ -1208,6 +1294,15 @@
     "print f(pi)\n",
     "print f"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
